--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VRT - ESF Challenge",
+  "name": "veryroadtripesf",
   "main": "server.js",
   "description": "Very Road Trip - ESF Challenge",
   "version": "0.1.0",
